# DesktopZephyr

./: .gitignore  CMakeLists.txt  README.md  main.qrc
.github/workflows/: Build.yaml
include/: AboutWindow.hpp  AnimationHelpers.hpp  SpriteHelpers.hpp  TextBubble.hpp  Version.hpp  Zephyr.hpp
src/: AboutWindow.cpp  AnimationHelpers.cpp  Main.cpp  SpriteHelpers.cpp  TextBubble.cpp  Zephyr.cpp
src/X11/: WindowList.cpp  WindowList.hpp
